--- a/styles/level0.css
+++ b/styles/level0.css
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-  color: #e0e0e0;
+  color: #ffc107;
   text-decoration: none;
 }
 
@@ -39,7 +39,7 @@ header {
 header h1 {
   margin: 0;
   font-size: 2em;
-  color: #e0e0e0;
+  color: #ffeb3b;
 }
 
 nav {
@@ -64,7 +64,7 @@ footer {
 .banner {
   width: 100%;
   height: 140px;
-  background: url("../assets/images/besementB.png") repeat-x center top;
+  background: url("../assets/images/image\ \(3\).png") repeat-x center top;
   background-size: auto 140px;
   display: flex;
   align-items: center;
@@ -89,7 +89,7 @@ footer {
 .banner-overlay p {
   font-family: 'Verdana', sans-serif;
   font-size: 1.2em;
-  color: #7e0707;
+  color: #ffc107;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
   margin: 5px 0 0;
 }
@@ -192,3 +192,32 @@ footer {
 .custom {
     font-family: 'CustomFont', sans-serif;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
